# boost-mirror

./: .gitignore  .gitmodules  CMakeLists.txt  Jamroot  README.md  boostcpp.jam  bootstrap.bat  bootstrap.sh  jenkins.sh  versions.sh
airtime/: CMakeLists.txt
doc/pdf/: Jamfile.v2  build
doc/src/: boostbook.css  minimal.css
doc/test/: test.mml  test.qbk
libs/: libraries.htm  maintainers.txt  script.py
more/getting_started/: unix-variants.html  windows.html  windows.rst
more/getting_started/detail/: build-from-source-head.rst
status/: explicit-failures-markup.xml
